--- a/habit-tracker/src/index.css
+++ b/habit-tracker/src/index.css
@@ -3,3 +3,16 @@
 button {
     cursor: pointer;
 }
+textarea {
+    width: 100%;
+    height: 80px;
+    resize: none;
+}
+input[type="text"], input[type="textarea"] {
+    height:40px;
+  
+   }
+input[type="text"]:focus, textarea:focus, select:focus {
+    outline: none; /* Cambia el borde al hacer foco */
+    box-shadow: 0 0 5px rgba(85, 3, 81, 0.5);
+  }
